tests/baselines/reference/tsxReactEmit5.errors.txt
test.d.ts(1,12): error TS7005: Variable 'React' implicitly has an 'any' type.


==== file.tsx (0 errors) ====
    declare namespace JSX {
    	interface Element { }
    	interface IntrinsicElements {
    		[s: string]: any;
    	}
    }
    
==== test.d.ts (1 errors) ====
    export var React;
               ~~~~~
!!! error TS7005: Variable 'React' implicitly has an 'any' type.
    
==== react-consumer.tsx (0 errors) ====
    import {React} from "./test";
    // Should emit test_1.React.createElement
    //  and React.__spread
    var foo: any;
    var spread1 = <div x='' {...foo} y='' />;
    